fix horizontal scrolling...qas.

--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,9 @@ Modules
 }
 
 
+.ctas{
+  text-align: center;
+}
 .cta{
  color:#fff;
 }
